--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -5,8 +5,74 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocalNicoMyList"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="600" Width="900" Closing="Window_Closing" Loaded="Window_Loaded">
+    <Window.Resources>
+        <DataTemplate x:Key="FolderListDataTemplate">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding name}" FontSize="16" />
+                <TextBlock FontSize="12" Margin="10,0,0,0" VerticalAlignment="Center">
+                    <TextBlock.Text>
+                        <MultiBinding StringFormat="[{0}]">
+                            <Binding Path="count" />
+                        </MultiBinding>
+                    </TextBlock.Text>
+                </TextBlock>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="DataTemplate1">
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <Image Source="{Binding thumbnailUrl}" Width="100" Height="76" />
+                <StackPanel Orientation="Vertical" Margin="10,0,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding postTime, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold" />
+                        <TextBlock Text="投稿" FontSize="12" Margin="5,0,0,0"/>
+                    </StackPanel>
+                    <TextBlock Text="{Binding title}" FontSize="16" FontWeight="Bold" />
+                    <!--<WebBrowser Height="50" local:BrowserBehavior.Html="{Binding HtmlToDisplay}" />-->
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="再生：" FontSize="12" />
+                        <TextBlock Text="{Binding viewCounter}" FontSize="12" FontWeight="Bold"/>
+                        <TextBlock Text="コメ：" FontSize="12"  Margin="15,0,0,0"/>
+                        <TextBlock Text="{Binding commentNum}" FontSize="12" FontWeight="Bold"/>
+                        <TextBlock Text="マイ：" FontSize="12" Margin="15,0,0,0" />
+                        <TextBlock Text="{Binding mylistCounter}" FontSize="12" FontWeight="Bold"/>
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
+    </Window.Resources>
+    <Grid x:Name="_Grid1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single" />
+        <GridSplitter VerticalAlignment="Stretch" Width="5"/>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <ComboBox Grid.Row="0" Width="200" HorizontalAlignment="Left" Margin="10,5,0,5">
+                <ComboBoxItem>登録が新しい順</ComboBoxItem>
+                <ComboBoxItem>登録が古い順</ComboBoxItem>
+                <ComboBoxItem>タイトル昇順</ComboBoxItem>
+                <ComboBoxItem>タイトル降順</ComboBoxItem>
+                <ComboBoxItem>投稿が新しい順</ComboBoxItem>
+                <ComboBoxItem>投稿が古い順</ComboBoxItem>
+                <ComboBoxItem>再生が多い順</ComboBoxItem>
+                <ComboBoxItem>再生が少ない順</ComboBoxItem>
+                <ComboBoxItem>コメントが新しい順</ComboBoxItem>
+                <ComboBoxItem>コメントが古い順</ComboBoxItem>
+                <ComboBoxItem>コメントが多い順</ComboBoxItem>
+                <ComboBoxItem>コメントが少ない順</ComboBoxItem>
+                <ComboBoxItem>マイリスト登録が多い順</ComboBoxItem>
+                <ComboBoxItem>マイリスト登録が少ない順</ComboBoxItem>
+                <ComboBoxItem>時間が長い順</ComboBoxItem>
+                <ComboBoxItem>時間が短い順</ComboBoxItem>
+            </ComboBox>
+            <ListView Grid.Row="1" x:Name="_videoListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource DataTemplate1}" AllowDrop="True" DragEnter="_videoListView_DragEnter" Drop="_videoListView_Drop"></ListView>
+        </Grid>
     </Grid>
 </Window>
