動画情報をローカルDBに保存するようにしてフォルダ変更時、ローカルDBから情報を取得するように変更。変更前は毎回、ニコニコ動画から情報を取得していて300件ぐらい登録されていると取得に5秒ぐらいかかっていた。

--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <Image Source="{Binding thumbnailUrl}" Width="100" Height="76" />
                 <StackPanel Orientation="Vertical" Margin="10,0,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding postTime, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold" />
+                        <TextBlock Text="{Binding firstRetrieve, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold" />
                         <TextBlock Text="投稿" FontSize="12" Margin="5,0,0,0"/>
                     </StackPanel>
                     <TextBlock Text="{Binding title}" FontSize="16" FontWeight="Bold" />
