動画一覧の情報としてgetflv済みかどうか、最新コメント日時を表示するようにした。

--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -36,6 +36,10 @@
                         <TextBlock Text="{Binding commentNum}" FontSize="12" FontWeight="Bold"/>
                         <TextBlock Text="マイ：" FontSize="12" Margin="15,0,0,0" />
                         <TextBlock Text="{Binding mylistCounter}" FontSize="12" FontWeight="Bold"/>
+                        <TextBlock Text="getflv：" FontSize="12" Margin="15,0,0,0" />
+                        <TextBlock Text="{Binding getflv}" FontSize="12" FontWeight="Bold"/>
+                        <TextBlock Text="最新コメ：" FontSize="12" Margin="15,0,0,0" />
+                        <TextBlock Text="{Binding latestCommentTime, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
