--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -42,9 +42,21 @@
                     <Setter Property="Foreground" Value="Black"/>
                     <Setter Property="BorderBrush" Value="AliceBlue"/>
                 </MultiDataTrigger>
+                <!-- コンテキストメニューを表示するとIsMouseOverがfalseになって背景色がなくなってしまうので -->                
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding Path=DataContext.showedContextMenu, RelativeSource={RelativeSource Self}}" Value="True" />
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="AliceBlue"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="AliceBlue"/>
+                </MultiDataTrigger>
+                <!-- コンテキストメニューで削除が選択されるとメッセージボックスが表示されるが、コンテキストメニューが消えてshowdContextMenuがfalseになって
+                        削除対象のフォルダの背景色がなくなって違和感があったので -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=DataContext.isContextMenuCommandTarget, RelativeSource={RelativeSource Self}}" Value="True" />
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
                     </MultiDataTrigger.Conditions>
                     <Setter Property="Background" Value="AliceBlue"/>
