--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -14,43 +14,82 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
                         <Border x:Name="Border"
+                            BorderThickness="1"
                             Padding="2"
                             SnapsToDevicePixels="true"
-                            Background="{TemplateBinding  Background}">
+                            Background="{TemplateBinding  Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}">
                             <ContentPresenter />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Style.Triggers>
-                <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="DodgerBlue"/>
-                    <Setter Property="Foreground" Value="White"/>
-                    <Setter Property="BorderBrush" Value="DodgerBlue"/>
-                </Trigger>
+                <!-- 選択:○、マウスオーバー:○ -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
+                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="#cce8ff"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="#99d1ff"/>
+                </MultiDataTrigger>
+                <!-- 選択:○、マウスオーバー:× -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
+                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="False" />
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="#cde8ff"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="#cde8ff"/>
+                </MultiDataTrigger>
+                <!-- 選択:○、フォーカス:×、コンテキストメニュー:× -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
+                        <Condition Binding="{Binding IsKeyboardFocusWithin, RelativeSource={RelativeSource AncestorType=ListView}}" Value="False"/>
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="#d9d9d9"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="#d9d9d9"/>
+                </MultiDataTrigger>
+                <!-- 選択:○、フォーカス:×、コンテキストメニュー:○ ... コンテキストメニューを表示するとフォーカスがなくなって色がアンフォーカス時の色に変わるのを抑制 -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
+                        <Condition Binding="{Binding ContextMenu.IsOpen, RelativeSource={RelativeSource Self}}" Value="True"/>
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="#cde8ff"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="#cde8ff"/>
+                </MultiDataTrigger>
+                <!-- 選択:× -->
                 <Trigger Property="IsSelected" Value="False">
                     <Setter Property="Background" Value="Transparent"/>
                     <Setter Property="Foreground" Value="Black"/>
                     <Setter Property="BorderBrush" Value="Transparent"/>
                 </Trigger>
+                <!-- 選択:×、マウスオーバー:○ -->
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True" />
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
                     </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="AliceBlue"/>
+                    <Setter Property="Background" Value="#e5f3ff"/>
                     <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="BorderBrush" Value="AliceBlue"/>
+                    <Setter Property="BorderBrush" Value="#e5f3ff"/>
                 </MultiDataTrigger>
-                <!-- コンテキストメニューを表示するとIsMouseOverがfalseになって背景色がなくなってしまうので -->                
+                <!-- コンテキストメニュー表示時、クリックされたアイテム -->
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding Path=DataContext.showedContextMenu, RelativeSource={RelativeSource Self}}" Value="True" />
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
                     </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="AliceBlue"/>
+                    <Setter Property="Background" Value="#cde8ff"/>
                     <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="BorderBrush" Value="AliceBlue"/>
+                    <Setter Property="BorderBrush" Value="#cde8ff"/>
                 </MultiDataTrigger>
                 <!-- コンテキストメニューで削除が選択されるとメッセージボックスが表示されるが、コンテキストメニューが消えてshowdContextMenuがfalseになって
                         削除対象のフォルダの背景色がなくなって違和感があったので -->
@@ -59,27 +98,9 @@
                         <Condition Binding="{Binding Path=DataContext.isContextMenuCommandTarget, RelativeSource={RelativeSource Self}}" Value="True" />
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False"/>
                     </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="AliceBlue"/>
+                    <Setter Property="Background" Value="#cde8ff"/>
                     <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="BorderBrush" Value="AliceBlue"/>
-                </MultiDataTrigger>
-                <MultiDataTrigger>
-                    <MultiDataTrigger.Conditions>
-                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
-                        <Condition Binding="{Binding IsKeyboardFocusWithin, RelativeSource={RelativeSource AncestorType=ListView}}" Value="False"/>
-                    </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="GhostWhite"/>
-                    <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="BorderBrush" Value="GhostWhite"/>
-                </MultiDataTrigger>
-                <MultiDataTrigger>
-                    <MultiDataTrigger.Conditions>
-                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
-                        <Condition Binding="{Binding ContextMenu.IsOpen, RelativeSource={RelativeSource Self}}" Value="True"/>
-                    </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="DodgerBlue"/>
-                    <Setter Property="Foreground" Value="White"/>
-                    <Setter Property="BorderBrush" Value="DodgerBlue"/>
+                    <Setter Property="BorderBrush" Value="#cde8ff"/>
                 </MultiDataTrigger>
             </Style.Triggers>
         </Style>
