ListViewに入力フォーカスがある際、アイテムが破線で囲まれないようにした。

--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Style x:Key="{x:Type ListViewItem}" TargetType="ListViewItem">
             <Setter Property="SnapsToDevicePixels" Value="true" />
             <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
