マイリスト一覧のアイテムがない位置でダブルクリックすると落ちていたのを修正。

--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -186,7 +186,13 @@
                 <Button Grid.Column="2" Margin="0,5,10,5" Padding="20,0" Click="refreshButton_Click">更新</Button>
             </Grid>
             <ListView Grid.Row="1" x:Name="_videoListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource VideoListDataTemplate}" AllowDrop="True" DragEnter="_videoListView_DragEnter" Drop="_videoListView_Drop"
-                      VirtualizingPanel.ScrollUnit="Pixel" MouseDoubleClick="_videoListView_MouseDoubleClick"></ListView>
+                      VirtualizingPanel.ScrollUnit="Pixel">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
+                        <EventSetter Event="MouseDoubleClick" Handler="MyListListViewItem_MouseDoubleClick" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
         </Grid>
     </Grid>
 </Window>
