--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -56,11 +56,21 @@
                     <Setter Property="Foreground" Value="Black"/>
                     <Setter Property="BorderBrush" Value="#d9d9d9"/>
                 </MultiDataTrigger>
-                <!-- 選択:○、フォーカス:×、コンテキストメニュー:○ ... コンテキストメニューを表示するとフォーカスがなくなって色がアンフォーカス時の色に変わるのを抑制 -->
+                <!-- 選択:○、フォーカス:×、コンテキストメニュー（アイテム）:○ ... コンテキストメニューを表示するとフォーカスがなくなって色がアンフォーカス時の色に変わるのを抑制 -->
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
                         <Condition Binding="{Binding ContextMenu.IsOpen, RelativeSource={RelativeSource Self}}" Value="True"/>
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Background" Value="#cde8ff"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="#cde8ff"/>
+                </MultiDataTrigger>
+                <!-- 選択:○、フォーカス:×、コンテキストメニュー（アイテムがない場所）:○ ... コンテキストメニューを表示するとフォーカスがなくなって色がアンフォーカス時の色に変わるのを抑制 -->
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True"/>
+                        <Condition Binding="{Binding ContextMenu.IsOpen, RelativeSource={RelativeSource AncestorType=ListView}}" Value="True"/>
                     </MultiDataTrigger.Conditions>
                     <Setter Property="Background" Value="#cde8ff"/>
                     <Setter Property="Foreground" Value="Black"/>
@@ -161,7 +171,8 @@
             </Grid.ColumnDefinitions>
 
             <!-- 左ペイン：フォルダ一覧 -->
-            <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single" MouseLeftButtonDown="folderListView_MouseLeftButtonDown">
+            <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single"
+                      MouseLeftButtonDown="folderListView_MouseLeftButtonDown" MouseRightButtonDown="folderListView_MouseRightButtonDown">
                 <ListView.Resources>
                     <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" Closed="ContextMenu_Closed">
                         <MenuItem Header="追加" Click="addFolder_Click" />
@@ -175,6 +186,11 @@
                         <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
                     </Style>
                 </ListView.ItemContainerStyle>
+                <ListView.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="追加" Click="addFolder_Click" />
+                    </ContextMenu>
+                </ListView.ContextMenu>
             </ListView>
             <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
             <!-- 右ペイン -->
@@ -195,7 +211,7 @@
                 </Grid>
                 <!-- マイリスト一覧 -->
                 <ListView Grid.Row="1" x:Name="_videoListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource VideoListDataTemplate}" AllowDrop="True" DragEnter="_videoListView_DragEnter" Drop="_videoListView_Drop"
-                          VirtualizingPanel.ScrollUnit="Pixel" MouseLeftButtonDown="videoListView_MouseLeftButtonDown">
+                          VirtualizingPanel.ScrollUnit="Pixel" MouseLeftButtonDown="videoListView_MouseLeftButtonDown" MouseRightButtonDown="videoListView_MouseRightButtonDown">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
                             <EventSetter Event="MouseDoubleClick" Handler="MyListListViewItem_MouseDoubleClick" />
