--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocalNicoMyList"
+        xmlns:prop="clr-namespace:LocalNicoMyList.Properties"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="900" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="{x:Static prop:Resources.WINDOW_TITLE}" Height="600" Width="900" Closing="Window_Closing" Loaded="Window_Loaded">
     <Window.Resources>
         <Style x:Key="{x:Type ListViewItem}" TargetType="ListViewItem">
             <Setter Property="SnapsToDevicePixels" Value="true" />
