--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -133,7 +133,10 @@
         </DataTemplate>
         <DataTemplate x:Key="VideoListDataTemplate">
             <StackPanel Orientation="Horizontal" Margin="0,5">
-                <Image Source="{Binding thumbnailUrl}" Width="100" Height="76" />
+                <Grid Width="100" Height="76" Background="Black">
+                    <Image Source="{Binding thumbnailUrl}" Width="96" Height="72" Stretch="UniformToFill" />
+                    <TextBlock Text="{Binding lengthText}" FontSize="11" FontWeight="Bold" Padding="3,1" Background="Black"  Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                </Grid>
                 <StackPanel Orientation="Vertical" Margin="10,0,0,0">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding firstRetrieve, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold" />
