--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -206,12 +206,20 @@
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <ComboBox x:Name="sortCB" Grid.Column="0" Width="200" HorizontalAlignment="Left" Margin="10,5,0,5"
                           ItemsSource="{Binding}" DisplayMemberPath="name" SelectedValuePath="id" SelectionChanged="sortCB_SelectionChanged" DropDownClosed="sortCB_DropDownClosed" />
-                    <Button Grid.Column="2" Margin="0,5,10,5" Padding="20,0" Click="refreshButton_Click">更新</Button>
+                    <Button Grid.Column="1" Margin="10,5,0,5" Padding="20,0" Click="refreshButton_Click">更新</Button>
+                    <StackPanel Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center">
+                        <Grid HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0">
+                            <TextBox Text="{Binding Path=titleFilterText, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="12" VerticalContentAlignment="Center" Padding="0,0,20,0" TextChanged="titleFilter_TextChanged"/>
+                            <Image Source="Resources/Images/filter_on.png" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="15" Height="15" Margin="0,0,5,0" Visibility="{Binding filterOnVisibility}"/>
+                            <Image Source="Resources/Images/filter_off.png" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="15" Height="15" Margin="0,0,5,0" Visibility="{Binding filterOffVisibility}" MouseLeftButtonDown="filterOff_MouseLeftButtonDown"/>
+                        </Grid>
+                    </StackPanel>
                 </Grid>
                 <!-- マイリスト一覧 -->
                 <ListView Grid.Row="1" x:Name="_videoListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource VideoListDataTemplate}" AllowDrop="True" DragEnter="_videoListView_DragEnter" Drop="_videoListView_Drop"
