タイトルフィルター欄のアイコンを変更。表示バージョンを1.22に変更。

--- a/LocalNicoMyList/MainWindow.xaml
+++ b/LocalNicoMyList/MainWindow.xaml
@@ -216,8 +216,19 @@
                     <StackPanel Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center">
                         <Grid HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0">
                             <TextBox Text="{Binding Path=titleFilterText, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="12" VerticalContentAlignment="Center" Padding="0,0,20,0" TextChanged="titleFilter_TextChanged"/>
-                            <Image Source="Resources/Images/filter_on.png" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="15" Height="15" Margin="0,0,5,0" Visibility="{Binding filterOnVisibility}"/>
-                            <Image Source="Resources/Images/filter_off.png" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="15" Height="15" Margin="0,0,5,0" Visibility="{Binding filterOffVisibility}" MouseLeftButtonDown="filterOff_MouseLeftButtonDown"/>
+                            <Image Source="Resources/Images/filter.png" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="12" Height="12" Margin="0,0,5,0" Visibility="{Binding filterOnVisibility}"/>
+                            <Image Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Center" Width="10" Height="10" Margin="0,0,6,0" Visibility="{Binding filterOffVisibility}" MouseLeftButtonDown="filterOff_MouseLeftButtonDown">
+                                <Image.Style>
+                                    <Style TargetType="{x:Type Image}">
+                                        <Setter Property="Source" Value="Resources/Images/filter_off_normal.png"/>
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Source" Value="Resources/Images/filter_off_mouseover.png"/>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Image.Style>
+                            </Image>
                         </Grid>
                     </StackPanel>
                 </Grid>
